# llm-zoomcamp-evaluation

./: .gitignore  README.md  agent-evaluation.ipynb  data-generation.ipynb  evaluation.ipynb  homework-4.ipynb  llm-as-judge.ipynb  main.py  pyproject.toml  rag-evaluation.ipynb  search-evaluation.ipynb
data/: agent-answers.csv  agent-evaluations.csv  ground_truth.csv  rag-evaluations.csv  rag-results.csv
